# prompt-line-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.ja.md  README.md  config.example.toml  index.html  package-lock.json  package.json  run.sh  settings.html  tsconfig.json  vite.config.ts
.cargo/: config.toml
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
src/: config.rs  history.rs  hotkey.rs  main.rs
src-frontend/: main.ts  settings.css  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsx
src-tauri/src/: clipboard.rs  config.rs  history.rs  lib.rs
