[package]
name = "prompt-line-rs"
version = "0.1.2"
description = "A floating text input tool for Windows"
authors = ["prompt-line-rs developers"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[profile.release]
strip = true
lto = true
